@@ -8,7 +8,7 @@
                2008 Martin Fleurke
                2009 Alex Buloichik
                2011 Didier Briel
-               2013-1014 Alex Buloichik
+               2013-1014 Alex Buloichik, Enrique Estevez
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -67,10 +67,12 @@ import org.omegat.util.StaticUtils;
  * @author Martin Fleurke
  * @author Alex Buloichik (alex73mail@gmail.com)
  * @author Didier Briel
+ * @author Enrique Estevez
  */
 public class PoFilter extends AbstractFilter {
 
     public static final String OPTION_ALLOW_BLANK = "disallowBlank";
+    public static final String OPTION_ALLOW_EDITING_BLANK_SEGMENT = "disallowEditingBlankSegment";
     public static final String OPTION_SKIP_HEADER = "skipHeader";
     public static final String OPTION_AUTO_FILL_IN_PLURAL_STATEMENT = "autoFillInPluralStatement";
     public static final String OPTION_FORMAT_MONOLINGUAL = "monolingualFormat";
@@ -234,6 +236,10 @@ public class PoFilter extends AbstractFilter {
      */
     public static boolean allowBlank = false;
     /**
+     * If false, the blank source segments will be skipped (not shown in editor)
+     */
+    public static boolean allowEditingBlankSegment = false;
+    /**
      * If true, the header will be skipped (not shown in editor)
      */
     public static boolean skipHeader = false;
@@ -303,6 +309,12 @@ public class PoFilter extends AbstractFilter {
             allowBlank = true;
         } else {
             allowBlank = false;
+        }
+        String disallowEditingBlankSegmentStr = processOptions.get(OPTION_ALLOW_EDITING_BLANK_SEGMENT);
+        if ((disallowEditingBlankSegmentStr == null) || (disallowEditingBlankSegmentStr.equalsIgnoreCase("true"))) {
+            allowEditingBlankSegment = true;
+        } else {
+            allowEditingBlankSegment = false;
         }
         String skipHeaderStr = processOptions.get(OPTION_SKIP_HEADER);
         if ("true".equalsIgnoreCase(skipHeaderStr)) {
@@ -435,7 +447,16 @@ public class PoFilter extends AbstractFilter {
                         flushTranslation(currentMode, fc);
                     }
                     currentMode = MODE.MSGID;
-                    sources[0].append(text);
+                    // Hack to be able to translate empty segments
+                    // If the source segment is empty and there is a reference then
+                    // it copies the reference of the segment and the localization note into the source segment
+                    if (allowEditingBlankSegment == true && text.length() == 0 && references.length() > 0)
+                    { 
+                        String aux = references.toString() + extractedComments.toString();
+                        sources[0].append(aux);
+                    }
+                    else
+                        sources[0].append(text);
                 } else {
                     // plural ID ('msg_id_plural')
                     currentMode = MODE.MSGID_PLURAL;
