@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.1.1
 ----------------------------------------------------------------------
-   6 Enhancements
+   7 Enhancements
    3 Bug fixes
    3 Localisation updates
 ----------------------------------------------------------------------
@@ -17,6 +17,9 @@
 
   - Mozilla .lang files filter
   https://sourceforge.net/p/omegat/feature-requests/962/
+
+  - PO filter: allow translating blank source segments
+  https://sourceforge.net/p/omegat/feature-requests/960/
 
   Other enhancements:
 
